picklistsrus/objects/PicklistUsage__mdt.object
<CustomObject>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <label>SObjectType</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Picklist Usage</label>
    <pluralLabel>Picklist Usages</pluralLabel>
</CustomObject>